--- a/Alicargo/Resources/Pages.resx
+++ b/Alicargo/Resources/Pages.resx
@@ -294,4 +294,7 @@
   <data name="SenderAdd" xml:space="preserve">
     <value>Добавить отправителя</value>
   </data>
+  <data name="SenderEdit" xml:space="preserve">
+    <value>Редактировать отправителя</value>
+  </data>
 </root>
