--- a/Alicargo.Core/Resources/Entities.resx
+++ b/Alicargo.Core/Resources/Entities.resx
@@ -426,4 +426,7 @@
   <data name="TariffOfTapePerBox" xml:space="preserve">
     <value>Тариф за скотч (€/коробка)</value>
   </data>
+  <data name="TransitCostEdited" xml:space="preserve">
+    <value>Доставка* (€)</value>
+  </data>
 </root>
