fixed misspell of weight word

--- a/Alicargo.Core/Resources/Entities.en.resx
+++ b/Alicargo.Core/Resources/Entities.en.resx
@@ -210,7 +210,7 @@
   <data name="FileName" xml:space="preserve">
     <value>File</value>
   </data>
-  <data name="Weigth" xml:space="preserve">
+  <data name="Weight" xml:space="preserve">
     <value>Weight</value>
   </data>
   <data name="GTD" xml:space="preserve">
