--- a/Alicargo.Core/Resources/Entities.it.resx
+++ b/Alicargo.Core/Resources/Entities.it.resx
@@ -231,7 +231,7 @@
   <data name="FileName" xml:space="preserve">
     <value>File Allegato</value>
   </data>
-  <data name="Weigth" xml:space="preserve">
+  <data name="Weight" xml:space="preserve">
     <value>Peso (kg)</value>
   </data>
   <data name="Mark" xml:space="preserve">
