--- a/Alicargo.Core/Resources/Entities.resx
+++ b/Alicargo.Core/Resources/Entities.resx
@@ -231,7 +231,7 @@
   <data name="FileName" xml:space="preserve">
     <value>Прикрепленный файл</value>
   </data>
-  <data name="Weigth" xml:space="preserve">
+  <data name="Weight" xml:space="preserve">
     <value>Вес (кг)</value>
   </data>
   <data name="Mark" xml:space="preserve">
