--- a/Alicargo.Jobs/Resources.resx
+++ b/Alicargo.Jobs/Resources.resx
@@ -124,7 +124,8 @@
 страховка - {7}€
 фактура - {8}€
 доставка - {9}€
-Итого - {10}€</value>
+pickup - {10}€
+Итого - {11}€</value>
     <comment>0  - AWB display
 1 - app display
 2 - mark
@@ -135,9 +136,11 @@
 7 - insurance
 8 - facture
 9 - transit cost
-10 - total</comment>
+10 - pickup
+11 - total</comment>
   </data>
   <data name="Calculation_Subject" xml:space="preserve">
     <value>Расчет стоимости заявки {0}</value>
+    <comment>0 - Application Id</comment>
   </data>
 </root>
