--- a/Alicargo/Resources/Validation.en.resx
+++ b/Alicargo/Resources/Validation.en.resx
@@ -129,4 +129,7 @@
   <data name="WrongLoginOrPassword" xml:space="preserve">
     <value>Invalid login or password</value>
   </data>
+  <data name="StateIsUsed" xml:space="preserve">
+    <value>State is used</value>
+  </data>
 </root>
