--- a/Alicargo/Resources/Pages.resx
+++ b/Alicargo/Resources/Pages.resx
@@ -315,4 +315,7 @@
   <data name="StateSettings_Visibilities" xml:space="preserve">
     <value>Доступно для отображения</value>
   </data>
+  <data name="Templates" xml:space="preserve">
+    <value>Шаблоны</value>
+  </data>
 </root>
