--- a/Alicargo/Resources/Pages.resx
+++ b/Alicargo/Resources/Pages.resx
@@ -318,4 +318,10 @@
   <data name="Templates" xml:space="preserve">
     <value>Шаблоны</value>
   </data>
+  <data name="Event" xml:space="preserve">
+    <value>Событие</value>
+  </data>
+  <data name="EventTemplates" xml:space="preserve">
+    <value>Шаблоны писем на событиях</value>
+  </data>
 </root>
