--- a/Alicargo/Resources/Pages.it.resx
+++ b/Alicargo/Resources/Pages.it.resx
@@ -315,4 +315,7 @@
   <data name="EventTemplates" xml:space="preserve">
     <value>Email templates for events</value>
   </data>
+  <data name="Help" xml:space="preserve">
+    <value>Help</value>
+  </data>
 </root>
